# solar_sym

./: CMakeLists.txt  README.md
configs/: cam_config.json  obj_config.json  ui_config.json
include/: load.h  object.h  rendering.h  scene.h  ui.h  utils.h
src/: load.cpp  main.cpp  object.cpp  rendering.cpp  scene.cpp  ui.cpp  utils.cpp
